# ml_template

./: README.md  pyproject.toml
notebooks/: data-exploration.ipynb
src/view/: __init__.py  figure.py  report.py
